[gd_scene load_steps=14 format=2]

[ext_resource path="res://resourses/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/quiz/secondary/info/info.gd" type="Script" id=2]
[ext_resource path="res://resourses/themes/default/styles/button/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://resourses/themes/default/styles/button/button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://resourses/themes/default/styles/button/button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://resourses/themes/default/styles/win_default.tres" type="StyleBox" id=6]
[ext_resource path="res://resourses/themes/default/styles/win_header.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hide"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "show"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="Info" type="PanelContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 400 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 2 )

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 400.0
custom_constants/separation = 10

[node name="HeaderPanel" type="PanelContainer" parent="VB"]
margin_right = 600.0
margin_bottom = 44.0
custom_styles/panel = ExtResource( 7 )

[node name="Header" type="Label" parent="VB/HeaderPanel"]
margin_top = 5.0
margin_right = 600.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Info" type="Label" parent="VB"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 351.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 6 )
align = 1
autowrap = true

[node name="Buttons" type="HBoxContainer" parent="VB"]
margin_top = 361.0
margin_right = 600.0
margin_bottom = 400.0

[node name="Next" type="Button" parent="VB/Buttons"]
margin_right = 600.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Окей"

[node name="Anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/hide = SubResource( 8 )
anims/show = SubResource( 9 )

[connection signal="pressed" from="VB/Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
